--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -882,6 +882,174 @@
     "else:\n",
     "    print('not strong number')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the number of digits in given number\n",
+    "n=153\n",
+    "count=0\n",
+    "while n:\n",
+    "    # ld=n%10 no need\n",
+    "    count+=1\n",
+    "    n=n//10\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find given number is amstrong or not\n",
+    "#amstrong-sum of  each digit is muntiplied with the power of length of given number,\n",
+    "#if the sum is equals to the given number then it is an amstrong number\n",
+    "\n",
+    "n=153\n",
+    "a=n\n",
+    "b=a\n",
+    "count=0\n",
+    "sum=0\n",
+    "while n:\n",
+    "    count+=1\n",
+    "    n=n//10\n",
+    "while a:\n",
+    "    ld=a%10\n",
+    "    sum+=ld**count\n",
+    "    a=a//10\n",
+    "if b==sum:\n",
+    "    print('amstrong number')\n",
+    "else:\n",
+    "    print('not an amstrong number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spy number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check the given value is spy number or not \n",
+    "#\n",
+    "n=1124\n",
+    "a=0\n",
+    "b=1\n",
+    "while n:\n",
+    "    ld=n%10\n",
+    "    sld=ld\n",
+    "    a+=ld\n",
+    "    b*=sld\n",
+    "    n=n//10\n",
+    "if a==b:\n",
+    "    print('spy number')\n",
+    "else:\n",
+    "    print('not a spy number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 => 362880\n",
+      "8 => 40320\n",
+      "7 => 5040\n",
+      "6 => 720\n",
+      "5 => 120\n",
+      "4 => 24\n",
+      "3 => 6\n",
+      "2 => 2\n",
+      "1 => 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print series of factorial of the numbers in given number\n",
+    "# n=987650432019\n",
+    "n=123456789\n",
+    "while n:\n",
+    "    ld=n%10\n",
+    "    b=1\n",
+    "    c=ld\n",
+    "    while ld:\n",
+    "            a=0\n",
+    "            b*=ld \n",
+    "            a+=b\n",
+    "            ld-=1\n",
+    "    print(c,'=>',a)\n",
+    "    a=0\n",
+    "    n=n//10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 => 1\n",
+      "2 => 2\n",
+      "3 => 6\n",
+      "4 => 24\n",
+      "5 => 120\n",
+      "6 => 720\n",
+      "7 => 5040\n",
+      "8 => 40320\n",
+      "9 => 362880\n",
+      "10 => 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print series of factorial of the numbers upto n\n",
+    "\n",
+    "b=10\n",
+    "a=1\n",
+    "while a<=b:\n",
+    "    x=1\n",
+    "    y=a\n",
+    "    fact=1\n",
+    "    while x<=y:\n",
+    "        fact*=x\n",
+    "        x+=1\n",
+    "    print(a,'=>',fact)\n",
+    "    a+=1\n"
+   ]
   }
  ],
  "metadata": {
