--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -958,7 +958,8 @@
    ],
    "source": [
     "#wap to check the given value is spy number or not \n",
-    "#\n",
+    "#the sum of all digits in given number is equals to sum of product of each digit in given number,\n",
+    "#then it is a spy number \n",
     "n=1124\n",
     "a=0\n",
     "b=1\n",
