--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -836,31 +836,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "20\n",
-      "60\n",
-      "120\n",
-      "120\n",
-      "4\n",
-      "12\n",
-      "24\n",
-      "24\n",
-      "1\n",
-      "145\n",
-      "strong number\n"
+      "145 strong number\n"
      ]
     }
    ],
    "source": [
     "#wap the given number is strong number or not\n",
-    "#sum of factorial of each digids in the given number, if the sum is equal to the given number then it is strong number\n",
+    "#sum of factorial of each digids in the given number,\n",
+    "#if the sum is equal to the given number then it is strong number\n",
     "n=145\n",
     "temp=n\n",
     "sum=0\n",
@@ -873,12 +863,12 @@
     "        i*=ld\n",
     "        # m+=1\n",
     "        ld-=1\n",
-    "        print(i)\n",
+    "        # print(i)\n",
     "    sum+=i\n",
     "    n=n//10\n",
-    "print(sum)\n",
+    "# print(sum)\n",
     "if sum==temp:\n",
-    "    print('strong number')\n",
+    "    print(f'{temp} strong number')\n",
     "else:\n",
     "    print('not strong number')\n"
    ]
@@ -945,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1054,6 +1044,520 @@
     "        x+=1\n",
     "    print(a,'=>',fact)\n",
     "    a+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print series of prime numbers from 1 to 100\n",
+    "a=100\n",
+    "b=1\n",
+    "while b<=a:\n",
+    "    # print(b)\n",
+    "    n=b\n",
+    "    m=1\n",
+    "    count=0\n",
+    "    while m<=n:\n",
+    "        if n%m==0:\n",
+    "            count+=1\n",
+    "        m+=1\n",
+    "    if count==2:\n",
+    "        print(n)\n",
+    "\n",
+    "    b+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "145\n",
+      "40585\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print the series of strong numbers from 1 to 2000\n",
+    "start=0\n",
+    "end=100000\n",
+    "while start<=end:\n",
+    "    n=start\n",
+    "    temp=n\n",
+    "    sum=0\n",
+    "    while n:\n",
+    "        ld=n%10\n",
+    "        x=1\n",
+    "        y=ld\n",
+    "        prod=1\n",
+    "        while x<=y:\n",
+    "            prod*=x\n",
+    "            x+=1\n",
+    "        sum+=prod\n",
+    "        n=n//10\n",
+    "    if temp==sum:\n",
+    "        print(sum)\n",
+    "    \n",
+    "    start+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "153\n",
+      "370\n",
+      "371\n",
+      "407\n",
+      "1634\n",
+      "8208\n",
+      "9474\n",
+      "54748\n",
+      "92727\n",
+      "93084\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print amstrong numbers from 1 to 100000\n",
+    "start=0\n",
+    "end=100000\n",
+    "while start<=end:\n",
+    "    n=start\n",
+    "    s=n\n",
+    "    temp=n\n",
+    "    count=0\n",
+    "    sum=0\n",
+    "    while s:\n",
+    "        count+=1\n",
+    "        s=s//10\n",
+    "    while n:\n",
+    "        ld=n%10\n",
+    "        sum+=ld**count\n",
+    "        n//=10\n",
+    "    if temp==sum:\n",
+    "        print(temp)\n",
+    "    start+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "22\n",
+      "123\n",
+      "132\n",
+      "213\n",
+      "231\n",
+      "312\n",
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print series of spy numbers from 1 to 100000\n",
+    "start=0\n",
+    "end=1000\n",
+    "while start<=end:\n",
+    "    n=start\n",
+    "    a=0\n",
+    "    b=1\n",
+    "    while n:\n",
+    "        ld=n%10\n",
+    "        sld=ld\n",
+    "        a+=ld\n",
+    "        b*=sld\n",
+    "        n=n//10\n",
+    "    if a==b:\n",
+    "        print(f'{start}')\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    start+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is polindrome\n",
+      "1 is polindrome\n",
+      "2 is polindrome\n",
+      "3 is polindrome\n",
+      "4 is polindrome\n",
+      "5 is polindrome\n",
+      "6 is polindrome\n",
+      "7 is polindrome\n",
+      "8 is polindrome\n",
+      "9 is polindrome\n",
+      "11 is polindrome\n",
+      "22 is polindrome\n",
+      "33 is polindrome\n",
+      "44 is polindrome\n",
+      "55 is polindrome\n",
+      "66 is polindrome\n",
+      "77 is polindrome\n",
+      "88 is polindrome\n",
+      "99 is polindrome\n",
+      "101 is polindrome\n",
+      "111 is polindrome\n",
+      "121 is polindrome\n",
+      "131 is polindrome\n",
+      "141 is polindrome\n",
+      "151 is polindrome\n",
+      "161 is polindrome\n",
+      "171 is polindrome\n",
+      "181 is polindrome\n",
+      "191 is polindrome\n",
+      "202 is polindrome\n",
+      "212 is polindrome\n",
+      "222 is polindrome\n",
+      "232 is polindrome\n",
+      "242 is polindrome\n",
+      "252 is polindrome\n",
+      "262 is polindrome\n",
+      "272 is polindrome\n",
+      "282 is polindrome\n",
+      "292 is polindrome\n",
+      "303 is polindrome\n",
+      "313 is polindrome\n",
+      "323 is polindrome\n",
+      "333 is polindrome\n",
+      "343 is polindrome\n",
+      "353 is polindrome\n",
+      "363 is polindrome\n",
+      "373 is polindrome\n",
+      "383 is polindrome\n",
+      "393 is polindrome\n",
+      "404 is polindrome\n",
+      "414 is polindrome\n",
+      "424 is polindrome\n",
+      "434 is polindrome\n",
+      "444 is polindrome\n",
+      "454 is polindrome\n",
+      "464 is polindrome\n",
+      "474 is polindrome\n",
+      "484 is polindrome\n",
+      "494 is polindrome\n",
+      "505 is polindrome\n",
+      "515 is polindrome\n",
+      "525 is polindrome\n",
+      "535 is polindrome\n",
+      "545 is polindrome\n",
+      "555 is polindrome\n",
+      "565 is polindrome\n",
+      "575 is polindrome\n",
+      "585 is polindrome\n",
+      "595 is polindrome\n",
+      "606 is polindrome\n",
+      "616 is polindrome\n",
+      "626 is polindrome\n",
+      "636 is polindrome\n",
+      "646 is polindrome\n",
+      "656 is polindrome\n",
+      "666 is polindrome\n",
+      "676 is polindrome\n",
+      "686 is polindrome\n",
+      "696 is polindrome\n",
+      "707 is polindrome\n",
+      "717 is polindrome\n",
+      "727 is polindrome\n",
+      "737 is polindrome\n",
+      "747 is polindrome\n",
+      "757 is polindrome\n",
+      "767 is polindrome\n",
+      "777 is polindrome\n",
+      "787 is polindrome\n",
+      "797 is polindrome\n",
+      "808 is polindrome\n",
+      "818 is polindrome\n",
+      "828 is polindrome\n",
+      "838 is polindrome\n",
+      "848 is polindrome\n",
+      "858 is polindrome\n",
+      "868 is polindrome\n",
+      "878 is polindrome\n",
+      "888 is polindrome\n",
+      "898 is polindrome\n",
+      "909 is polindrome\n",
+      "919 is polindrome\n",
+      "929 is polindrome\n",
+      "939 is polindrome\n",
+      "949 is polindrome\n",
+      "959 is polindrome\n",
+      "969 is polindrome\n",
+      "979 is polindrome\n",
+      "989 is polindrome\n",
+      "999 is polindrome\n",
+      "1001 is polindrome\n",
+      "1111 is polindrome\n",
+      "1221 is polindrome\n",
+      "1331 is polindrome\n",
+      "1441 is polindrome\n",
+      "1551 is polindrome\n",
+      "1661 is polindrome\n",
+      "1771 is polindrome\n",
+      "1881 is polindrome\n",
+      "1991 is polindrome\n",
+      "2002 is polindrome\n",
+      "2112 is polindrome\n",
+      "2222 is polindrome\n",
+      "2332 is polindrome\n",
+      "2442 is polindrome\n",
+      "2552 is polindrome\n",
+      "2662 is polindrome\n",
+      "2772 is polindrome\n",
+      "2882 is polindrome\n",
+      "2992 is polindrome\n",
+      "3003 is polindrome\n",
+      "3113 is polindrome\n",
+      "3223 is polindrome\n",
+      "3333 is polindrome\n",
+      "3443 is polindrome\n",
+      "3553 is polindrome\n",
+      "3663 is polindrome\n",
+      "3773 is polindrome\n",
+      "3883 is polindrome\n",
+      "3993 is polindrome\n",
+      "4004 is polindrome\n",
+      "4114 is polindrome\n",
+      "4224 is polindrome\n",
+      "4334 is polindrome\n",
+      "4444 is polindrome\n",
+      "4554 is polindrome\n",
+      "4664 is polindrome\n",
+      "4774 is polindrome\n",
+      "4884 is polindrome\n",
+      "4994 is polindrome\n",
+      "5005 is polindrome\n",
+      "5115 is polindrome\n",
+      "5225 is polindrome\n",
+      "5335 is polindrome\n",
+      "5445 is polindrome\n",
+      "5555 is polindrome\n",
+      "5665 is polindrome\n",
+      "5775 is polindrome\n",
+      "5885 is polindrome\n",
+      "5995 is polindrome\n",
+      "6006 is polindrome\n",
+      "6116 is polindrome\n",
+      "6226 is polindrome\n",
+      "6336 is polindrome\n",
+      "6446 is polindrome\n",
+      "6556 is polindrome\n",
+      "6666 is polindrome\n",
+      "6776 is polindrome\n",
+      "6886 is polindrome\n",
+      "6996 is polindrome\n",
+      "7007 is polindrome\n",
+      "7117 is polindrome\n",
+      "7227 is polindrome\n",
+      "7337 is polindrome\n",
+      "7447 is polindrome\n",
+      "7557 is polindrome\n",
+      "7667 is polindrome\n",
+      "7777 is polindrome\n",
+      "7887 is polindrome\n",
+      "7997 is polindrome\n",
+      "8008 is polindrome\n",
+      "8118 is polindrome\n",
+      "8228 is polindrome\n",
+      "8338 is polindrome\n",
+      "8448 is polindrome\n",
+      "8558 is polindrome\n",
+      "8668 is polindrome\n",
+      "8778 is polindrome\n",
+      "8888 is polindrome\n",
+      "8998 is polindrome\n",
+      "9009 is polindrome\n",
+      "9119 is polindrome\n",
+      "9229 is polindrome\n",
+      "9339 is polindrome\n",
+      "9449 is polindrome\n",
+      "9559 is polindrome\n",
+      "9669 is polindrome\n",
+      "9779 is polindrome\n",
+      "9889 is polindrome\n",
+      "9999 is polindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print the series of polindroms from 1 to 10000\n",
+    "start=0\n",
+    "end=10000\n",
+    "while start<=end:\n",
+    "    n=start\n",
+    "    temp=n\n",
+    "    res=0\n",
+    "    while n:\n",
+    "        ld=n%10\n",
+    "        res=(res*10)+ld\n",
+    "        n=n//10\n",
+    "    if res==temp:\n",
+    "        print(f'{start} is polindrome')\n",
+    "\n",
+    "    \n",
+    "    start+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# num=19792138814591\n",
+    "num=197921388145912\n",
+    "while num>9:\n",
+    "    sum=0\n",
+    "    while num:\n",
+    "        ld=num%10\n",
+    "        sum+=ld\n",
+    "        num=num//10\n",
+    "    # print(sum)\n",
+    "    num=sum\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract middle digit of the given number\n",
+    "n=789\n",
+    "temp=n\n",
+    "count=0\n",
+    "while n:\n",
+    "    count+=1\n",
+    "    n=n//10\n",
+    "count=count//2\n",
+    "print(count)\n",
+    "while count:\n",
+    "    temp=temp//10\n",
+    "    count-=1\n",
+    "print(temp%10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract middle digit of the given number\n",
+    "n=78955\n",
+    "temp=n\n",
+    "count=0\n",
+    "while n:\n",
+    "    count+=1\n",
+    "    n=n//10\n",
+    "count=count//2\n",
+    "# print(count)\n",
+    "print(temp//10**count%10)"
    ]
   }
  ],
