--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "7\n",
+      "7\n"
      ]
     }
    ],
    "source": [
     "#wap to convert binary  to decimal value\n",
     "# a=bytes(input('enter value'),'utf-8')\n",
-    "a=b'101'\n",
+    "a=b'0111'\n",
     "b=0\n",
     "e=0\n",
     "c=0\n",
@@ -27,7 +28,15 @@
     "print(b)\n",
     "#---------------------------------------------------------------------------\n",
     "# d=0b101\n",
-    "# print(d)"
+    "# print(d)\n",
+    "#---------------------------------------------------------------------------\n",
+    "a=b'111'\n",
+    "b=0\n",
+    "for i in range(0,len(a)):\n",
+    "   pass\n",
+    "print(b)\n",
+    "\n",
+    "   # print(i)"
    ]
   }
  ],
