--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -1559,6 +1559,143 @@
     "# print(count)\n",
     "print(temp//10**count%10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p 0 -8\n",
+      "e 1 -7\n",
+      "n 2 -6\n",
+      "d 3 -5\n",
+      "r 4 -4\n",
+      "i 5 -3\n",
+      "v 6 -2\n",
+      "e 7 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n='pendrive'\n",
+    "start=0\n",
+    "end=-(len(n))\n",
+    "\n",
+    "while start<len(n):\n",
+    "    print(n[start],start,end)\n",
+    "    end+=1\n",
+    "    start+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8 p\n",
+      "-7 e\n",
+      "-6 n\n",
+      "-5 d\n",
+      "-4 r\n",
+      "-3 i\n",
+      "-2 v\n",
+      "-1 e\n",
+      "0 p\n",
+      "1 e\n",
+      "2 n\n",
+      "3 d\n",
+      "4 r\n",
+      "5 i\n",
+      "6 v\n",
+      "7 e\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='pendrive'\n",
+    "b=-len(a)\n",
+    "while b<len(a):\n",
+    "    print(b,a[b])\n",
+    "    b+=1\n",
+    "    # print(a)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n",
+      "A\n",
+      "------------------------------\n",
+      "s\n",
+      "u\n",
+      "y\n",
+      "---------------------\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "-----------------------\n",
+      "$\n",
+      "#\n",
+      "@\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract uppuercase characters from given string\n",
+    "a='suRyA7777$#@'\n",
+    "b=0\n",
+    "while b<len(a):\n",
+    "    if 'A'<=a[b]<='Z':\n",
+    "        print(a[b])        \n",
+    "    b+=1\n",
+    "print('------------------------------')\n",
+    "b=0\n",
+    "while b<len(a):\n",
+    "    if 'a'<=a[b]<='z':\n",
+    "        print(a[b])\n",
+    "    b+=1\n",
+    "b=0\n",
+    "print('---------------------')\n",
+    "while b<len(a):\n",
+    "    if '0'<=a[b]<='9':\n",
+    "        print(a[b])\n",
+    "    b+=1\n",
+    "b=0\n",
+    "print('-----------------------')\n",
+    "while b<len(a):\n",
+    "    if not('a'<=a[b]<='z' or 'A'<=a[b]<='Z' or '0'<=a[b]<='9'):\n",
+    "        print(a[b])\n",
+    "    b+=1\n",
+    "# check wovels, consonents\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
