--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -70,20 +70,74 @@
       "1\n",
       "2\n",
       "4\n",
-      "5\n",
       "stop\n"
      ]
     }
    ],
    "source": [
-    "a='strnig'\n",
-    "for i in range(0,len(a)):\n",
+    "# a='string'\n",
+    "a=5\n",
+    "# for i in range(0,len(a)):\n",
+    "for i in range(0,a):\n",
     "    if i==3:\n",
     "        # break\n",
     "        pass\n",
     "    else:\n",
     "        print(i)\n",
     "print('stop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print odd numbers upto n using for loop\n",
+    "a=10\n",
+    "for i in range(0,a):\n",
+    "    if i%2==0:\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print even numbers upto n using for loop\n",
+    "a=10\n",
+    "for i in range(1,a):\n",
+    "    if i%2!=0:\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(i)"
    ]
   }
  ],
