--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1649,49 +1649,55 @@
      "text": [
       "R\n",
       "A\n",
-      "------------------------------\n",
+      "extract lowercase------------------\n",
       "s\n",
       "u\n",
       "y\n",
-      "---------------------\n",
+      "extract numbered characters---------\n",
       "7\n",
       "7\n",
-      "7\n",
-      "7\n",
-      "-----------------------\n",
+      "extract special characters----------\n",
       "$\n",
       "#\n",
-      "@\n"
+      "@\n",
+      "extract vowels----------------------\n",
+      "u\n",
+      "A\n"
      ]
     }
    ],
    "source": [
     "#wap to extract uppuercase characters from given string\n",
-    "a='suRyA7777$#@'\n",
+    "a='suRyA77$#@'\n",
     "b=0\n",
     "while b<len(a):\n",
     "    if 'A'<=a[b]<='Z':\n",
     "        print(a[b])        \n",
     "    b+=1\n",
-    "print('------------------------------')\n",
+    "print('extract lowercase------------------')\n",
     "b=0\n",
     "while b<len(a):\n",
     "    if 'a'<=a[b]<='z':\n",
     "        print(a[b])\n",
     "    b+=1\n",
     "b=0\n",
-    "print('---------------------')\n",
+    "print('extract numbered characters---------')\n",
     "while b<len(a):\n",
     "    if '0'<=a[b]<='9':\n",
     "        print(a[b])\n",
     "    b+=1\n",
     "b=0\n",
-    "print('-----------------------')\n",
+    "print('extract special characters----------')\n",
     "while b<len(a):\n",
     "    if not('a'<=a[b]<='z' or 'A'<=a[b]<='Z' or '0'<=a[b]<='9'):\n",
     "        print(a[b])\n",
     "    b+=1\n",
-    "# check wovels, consonents\n",
+    "print('extract vowels----------------------')\n",
+    "b=0\n",
+    "while b<len(a):\n",
+    "    if a[b] in'aeiouAEIOU':\n",
+    "        print(a[b])\n",
+    "    b+=1\n",
     "\n",
     "\n",
     "\n"
